Modify Google Auth and Http-Only Cookies